--- a/Grant Management System/Pages/Departments/Index.cshtml
+++ b/Grant Management System/Pages/Departments/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Departments</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Add New Department</a>
 </p>
 <table class="table">
     <thead>
