--- a/Grant Management System/Pages/Departments/Delete.cshtml
+++ b/Grant Management System/Pages/Departments/Delete.cshtml
@@ -2,14 +2,12 @@
 @model Grant_Management_System.Pages.Departments.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Department";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete @Model.Department.DepartmentName?</h3>
 <div>
-    <h4>Department</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
