--- a/Grant Management System/Pages/Departments/Details.cshtml
+++ b/Grant Management System/Pages/Departments/Details.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<!--<h1>Details</h1>-->
 
 <div>
-    <h4>Department</h4>
+    <h1>@Model.Department.DepartmentName</h1>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
