--- a/Grant Management System/Pages/Departments/Index.cshtml
+++ b/Grant Management System/Pages/Departments/Index.cshtml
@@ -6,10 +6,10 @@
 }
 
 <h1>Departments</h1>
-
-<p>
-    <a asp-page="Create">Add New Department</a>
+<p style="text-align:right;">
+    <a asp-page="Create">Create a New Department</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
