--- a/Grant Management System/Pages/Index.cshtml
+++ b/Grant Management System/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Weber State Grant Management System.</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>The Grant Management System is designed to streamline the management of grants, departments, and colleges within an organization. It provides a user-friendly interface for administrators, employees, and department heads to manage grant-related information efficiently.</p>
 </div>
