Login and Sign Up Added in Home Page

--- a/Grant Management System/Pages/Index.cshtml
+++ b/Grant Management System/Pages/Index.cshtml
@@ -7,4 +7,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to Weber State Grant Management System.</h1>
     <p>The Grant Management System is designed to streamline the management of grants, departments, and colleges within an organization. It provides a user-friendly interface for administrators, employees, and department heads to manage grant-related information efficiently.</p>
+    <p>
+        <a asp-area="" asp-page="/Account/LogIn">Log In</a><br />
+        <a asp-area="" asp-page="/Account/SignUp">Sign Up</a>
+    </p>
 </div>
