--- a/Grant Management System/Pages/Departments/Index.cshtml
+++ b/Grant Management System/Pages/Departments/Index.cshtml
@@ -5,11 +5,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Departments</h1>
-<p style="text-align:right;">
-    <a asp-page="Create">Create a New Department</a>
-</p>
+<h1>Index</h1>
 
+<p>
+    <a asp-page="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
