--- a/Grant Management System/Pages/Departments/Edit.cshtml
+++ b/Grant Management System/Pages/Departments/Edit.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit the name as you wish</h1>
+<h1>Edit</h1>
 
-<h4>@Model.Department.DepartmentName</h4>
+<h4>Department</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
