--- a/Grant Management System/Pages/Shared/_Layout.cshtml
+++ b/Grant Management System/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Grant_Management_System.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLFEMqJXG23Hv1o1s8uPOf5LwvfJ8AqI49IWmtL5KXVn5pE4ovk8OHP3RXK5GmkF" crossorigin="anonymous">
 </head>
 <body>
     <header>
