--- a/Grant Management System/Pages/Shared/_Layout.cshtml
+++ b/Grant Management System/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/College/Index">Colleges</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Departments</a>
                         </li>
                         <li class="nav-item">
