--- a/Grant Management System/Pages/Departments/Create.cshtml
+++ b/Grant Management System/Pages/Departments/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Add New Department";
 }
 
-<h1>Create a new department. HELLOOO</h1>
+<h1>Create a new department.</h1>
 <p style="color:red">*All fields are required!</p>
 
 <hr />
