--- a/Grant Management System/Pages/Shared/_Layout.cshtml
+++ b/Grant Management System/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Departments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Review</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/ReviewPage">Review</a>
                         </li>
                     </ul>
                 </div>
